--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand  col-sm-3" href="#">
-            <img class="logo" src="imagens/logo.png" width="35%">
+            <img class="logo" src="logo.png" width="35%">
             FoodSpin
         </a>
           <div class="col align-items-center" id="navbarNav">
